--- a/app/src/components/Navbar.css
+++ b/app/src/components/Navbar.css
@@ -1,6 +1,8 @@
 .navbar {
   background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
   height: 80px;
+  width: 100%;
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
