--- a/app/src/App.css
+++ b/app/src/App.css
@@ -5,10 +5,7 @@
   font-family: "PT Sans", sans-serif;
 }
 
-.home,
-.services,
-.products,
-.sign-up {
+.home {
   display: flex;
   height: 90vh;
   align-items: center;
@@ -19,31 +16,4 @@
 .box {
   width: 80%;
   margin: 0 auto;
-}
-
-.services {
-  background-image: url("./assets/images/img-2.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.products {
-  background-image: url("./assets/images/img-1.jpg");
-  background-position: center;
-  background-size: fill;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
-}
-
-.sign-up {
-  background-image: url("./assets/images/img-8.jpg");
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  color: #fff;
-  font-size: 100px;
 }
