--- a/app/src/components/HeroSection.css
+++ b/app/src/components/HeroSection.css
@@ -1,3 +1,15 @@
+.head-text {
+  position: relative;
+}
+.text-on-image {
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  font-size: 50px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.2);
+  color: #fff;
+}
 video {
   object-fit: cover;
   width: 80%;
@@ -5,10 +17,11 @@ video {
   position: fixed;
   z-index: -1;
 }
+.top-img {
+  width: 100%;
+}
 
 .hero-container {
-  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
-  height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -32,22 +45,13 @@ video {
     "Lucida Sans", Arial, sans-serif;
 }
 
-.hero-btns {
-  margin-top: 32px;
-}
-
-.hero-btns .btn {
-  margin: 6px;
-}
-
-.fa-play-circle {
-  margin-left: 4px;
-}
-
 @media screen and (max-width: 960px) {
   .hero-container > h1 {
     font-size: 70px;
     margin-top: -150px;
+  }
+  .text-on-image {
+    font-size: 30px;
   }
 }
 
@@ -56,17 +60,10 @@ video {
     font-size: 50px;
     margin-top: -100px;
   }
-
+  .text-on-image {
+    font-size: 15px;
+  }
   .hero-container > p {
     font-size: 30px;
-  }
-
-  .btn-mobile {
-    display: block;
-    text-decoration: none;
-  }
-
-  .btn {
-    width: 100%;
   }
 }
