--- a/app/src/components/Navbar.css
+++ b/app/src/components/Navbar.css
@@ -38,7 +38,7 @@
 
 .nav-menu {
   display: grid;
-  grid-template-columns: repeat(4, auto);
+  grid-template-columns: repeat(4, 20%);
   grid-gap: 10px;
   list-style: none;
   text-align: center;
@@ -77,7 +77,7 @@
   display: none;
 }
 
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 850px) {
   .NavbarItems {
     position: relative;
   }
