--- a/src/components/Kittens.css
+++ b/src/components/Kittens.css
@@ -15,3 +15,13 @@
   background-color: rgba(0, 0, 0, 0.2);
   color: #fff;
 }
+@media screen and (max-width: 960px) {
+  .text-on-image {
+    font-size: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .text-on-image {
+    font-size: 15px;
+  }
+}
